# Stock_analysis

./: .gitignore  CLAUDE.md  README.md  TESTS_SUMMARY.md  TEST_QUICKSTART.md  append_stock_codes.py  db_market_scanner.py  financial_statement.py  fundamental_scanner.py  get_financial_report.py  main.py  nn_predict.py  pyproject.toml  requirements.txt  script.py
configs/: constants.py
core/: db.py  finmind_client.py  local_index.py  logger.py  rate_limiter.py  scanner_base.py  stock_list.py
dashboard/: app.py
dashboard/static/: index.html
scanners/: chip_scanner.py  fundamental_scanner.py  price_scanner.py  valuation_scanner.py
tests/: README.md  __init__.py  conftest.py  test_chip_scanner.py  test_finmind_api_diagnostic.py  test_fundamental_scanner.py  test_price_scanner.py  test_valuation_scanner.py
