[project]
name = "stock-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "finmind>=1.9.5",
    "lxml>=6.0.2",
    "pandas",
    "psycopg2-binary",
    "python-dotenv",
    "requests",
    "sqlalchemy",
    "tqdm>=4.67.3",
    "twstock>=1.4.0",
    "yfinance",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

[tool.pytest.ini_options]
markers = ["api: 需要真實 API 呼叫的診斷測試（用 -m api 執行）"]
addopts = "-m 'not api'"
